<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="4dp"
    app:strokeColor="@android:color/darker_gray"
    app:strokeWidth="0.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- LinearLayout para contener el nombre de la tarjeta y el número de la tarjeta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="8dp">

            <!-- TextView para mostrar el nombre de la tarjeta -->
            <TextView
                android:id="@+id/tvNombreTarjeta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tipo_tarjeta"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <!-- TextView para mostrar el número de la tarjeta (enmascarado) -->
            <TextView
                android:id="@+id/tvNumeroTarjeta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_numero_tarjeta"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="end" />
        </LinearLayout>

        <!-- TextView para mostrar el titular -->
        <TextView
            android:id="@+id/tvTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_titular_tarjeta"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="4dp"/>

        <!-- TextView para mostrar la fecha de vencimiento -->
        <TextView
            android:id="@+id/tvFechaVencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_fecha_vencimiento"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="8dp"/>

        <!-- Eliminar botón (ImageButton o similar) -->
        <ImageButton
            android:id="@+id/btnEliminarTarjetaDeHistorial"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_delete_24"
            android:contentDescription="@string/btn_eliminar_tarjeta_historial"
            android:layout_gravity="end"
            android:layout_marginTop="2dp"
            android:background="?android:attr/selectableItemBackground" />



    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
